# interpretable_bioacoustic_classifiers

./: .env.template  .gitignore  Dockerfile  README.md  app.def  docker-compose.yaml  main.py  pyproject.toml  test.sh
analysis/: 001_feature_attention_weights.ipynb
assets/: RFCX_scores_table.latex  SO_scores_table.latex
config/: app.yaml  cross_validation.yaml  eval.yaml  train.yaml
config/app/: attention_uncertainty.yaml  cross_validation.yaml  dashboard.yaml
config/callbacks/: default.yaml  sequence_decoder.yaml  species_scores.yaml
config/cross_validator/: default.yaml
config/data/: birdclef_2024.yaml  rainforest_connection.yaml  sounding_out_chorus.yaml  soundscape_codes.yaml  soundscape_embeddings.yaml  soundscape_vae_embeddings.yaml
config/experiment/: attention_uncertainty.yaml  base_vae.yaml  birdnet.yaml  nifti_vae.yaml  smooth_nifti_vae.yaml  so_ec_species_detector_base_vae.yaml  so_uk_species_detector_base_vae.yaml  soundscape_generator.yaml  species_detector.yaml
config/hydra/: default.yaml
config/logger/: wandb.yaml
docs/: index.html
scripts/: interpolation_plots.py  latent_average_plots.py  precision_label_plot.py  representation_stability.py  rfcx_bird_interpolation_plots.py  rfcx_bird_train_test.sh  rfcx_cross_validation.sh  rfcx_frog_interpolation_plots.py  rfcx_frog_train_test.sh  rfcx_probability_plots.py  score_tables.py  score_violin_plots.py  shifted_calls_plot.py  significance_test.py  so_ec_cross_validation.sh  so_ec_interpolation_plots.py  so_ec_train_test.sh  so_uk_cross_validation.sh  so_uk_interpolation_plots.py  so_uk_start_points.py  so_uk_train_test.sh  species_clusters.py  species_score_box_plots.py  spindalis.py
slurm/: build.sh  pipeline.sh
test/: conftest.py  utils.py
(+76 files in other folders)
